# lia-ai-service

./: .env.example  .gitignore  Dockerfile  PROFILE_EXAMPLES.md  README.md  SETUP_SUPABASE.md  database_setup.sql  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_service.py
src/agents/: lia_agent.py  multi_agent_flashcards.py
src/models/: requests.py  responses.py
src/routers/: chat.py  content_generation.py  health.py  profile.py
src/services/: ai_service.py  database_service.py  openai_utils.py
